# Image-Processing

Bilateral Filtering/: BilateralFilter.cpp  BilateralFilter.h
FFT Display/: CMakeLists.txt  fft_display.cpp
Geometric Transforms/: MapGCP.cpp  MapGCP.h  MapRST.cpp  transform_gcp.cpp
Histogram-Based Enhancements/: LinearLut.cpp  MatchingLut.cpp
Perspective and Log-Polar Transformations/: CMakeLists.txt  GeometricTransformation.h  MapPolar.cpp  MapPolar.h  MapQ2Q.cpp  Remap.cpp
Perspective and Log-Polar Transformations/transform_polar/: CMakeLists.txt  transform_polar.cpp
Quantization/: Quantize.cpp  quantize.cpp
Spatial and Gradient Filtering/: CMakeLists.txt  Filter2D.h  gradient.cpp  spatial_filter.cpp
Threshold Selection [Otsu's Method]/: OtsusThreshold.cpp  threshold.cpp
Visual Cryptography/: CMakeLists.txt  visual_cryptography.cpp
